# minechat

./: .gitignore  README.rst  pyproject.toml
minechat/: cli.py  conf.py  exceptions.py  log.py  main.py  utils.py
minechat/client/: __init__.py  client.py  exceptions.py  typings.py
minechat/commands/: consumer.py  producer.py
